@@ -4,6 +4,8 @@ BuildingsPy Changelog
 Version 2.2.0, xxx, 2020 -- Release 2.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - xxx
+- For library merger, corrected erroneous replacement of IBPSA in name of issue number
+  (https://github.com/lbl-srg/BuildingsPy/issues/412)
 - For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
   (https://github.com/lbl-srg/BuildingsPy/issues/410)
 - Added local relative tolerance along y axis by default
